# agents-at-scale

./: .gitignore  README.md  main.py  pyproject.toml
bedrock-agent-core/: README.md
bedrock-agent-core/demo-deploying-strands/: app.py  notebook.ipynb  utills.py
strands/: README.md
strands/demo-agentic-voice-based-rag-with-vision-based-retrieval/: README.md
strands/demo-manim-video-gen/: README.md  app.py  sample_prompts.txt
strands/demo-manim-video-gen/src/: manim_server_updated.py
strands/demo-summary-speak/: README.md
strands/demo-summary-speak/results/: chapter10.md
