[project]
name = "agents-at-scale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "kagglehub>=0.3.12",
    "manim>=0.19.0",
    "mcp>=1.11.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.2.0",
]
